# gst-plugins-rtp

./: .gitignore  .gitmodules  AUTHORS  CI-Makefile  CMakeLists.txt  Jenkinsfile  Makefile.am  README.md  autogen.sh  config.h  config.h.cmake  configure.ac  env.sh  gst-plugins-barcortp.spec.in  make_debian  meson.build  meson_options.txt
debian/: build-deps.in  changelog  control  control.in  copyright  gst-plugins-barcortp.lintian-overrides  gstreamer-plugins-barcortp.install  rules
gst/: Makefile.am
gst/rtp/: Makefile.am  gst-plugins-barcortp.c  gstbarcomgs_common.c  gstbarcomgs_common.h  gstrtpparameters.h  gstrtpsink.c  gstrtpsink.h  gstrtpsrc.c  gstrtpsrc.h
jenkins-test/: Dockerfile  docker-compose.yml
jenkins-test/testsuites/: entrypoint.sh
jenkins-test/testsuites/TESTS/: config.sh  urirecv.bats
pkgconfig/: Makefile.am  gstreamer-plugins-barcortp-uninstalled.pc.in
src/: CMakeLists.txt  barcortp.c  gst-plugins-barcortp.c  gst_object_set_properties_from_uri_query_parameters.c  gst_object_set_properties_from_uri_query_parameters.h  gstbarcomgs_common.c  gstbarcomgs_common.h  gstrtpparameters.h  gstrtpsink.c  gstrtpsink.h  gstrtpsrc.c  gstrtpsrc.h  meson.build
tests/: CMakeLists.txt  meson.build  rtpsink.c  rtpsrc.c
